      provided some on his own (as CXXFLAGS)

  * Gigasampler format engine:
    - extensive synthesis optimization
      (reimplementation of EGs and LFO(s), removed synthesis parameter
      prerendering and the synthesis parameter matrix in general, splitting
      each audio fragment into subfragments now where each subfragment uses
      constant synthesis parameters - that is volume, pitch and filter
      coefficients)
    - fine tuning of the EG modulation parameters
    - improved filter cutoff calculation by adding support for the
      following gig parameters: Cutoff freq (used when no cutoff
      controller is defined), Control invert, Minimum cutoff, Velocity
      curve and Velocity range. The keyboard tracking now scales
      cutoff frequency instead of resonance.
    - filter fine tuning: calculation of cutoff frequency and
      bandwidth improved. Removed use of "BasicBPFilter". Changed
      bandpass filter from constant peak to constant skirt. Added
      support for gig parameter Resonance.
    - fixed bug in sysex handling (patch by Juan Linietsky)
    - added global volume attenuation of -9 dB (0.35f) to prevent clipping
      which can be overridden with --enable-global-attenuation
    - EG fixes: made the length of "attack hold" stage more
      accurate. Release stage can now start before attack stage
      ends. Cancel release didn't work when sustain was zero. Attack
      time now has a minimal value to prevent clicks.
    - fixed pitch changes larger than one octave
    - fixed EG3 (pitch envelope) synthesis which was neutral all the time
    - implemented portamento mode and solo mode (a.k.a 'mono mode'):
      all modes can be altered via standard GM messages, that is CC5 for
      altering portamento time, CC65 for enabling / disabling portamento
      mode, CC126 for enabling solo mode and CC127 for disabling solo mode

  * LSCP server:
    - fixed application exit on broken pipe error (fixes bug #20)