@@ -716,6 +716,20 @@ if test "$config_process_muted_channels" = "yes"; then
   AC_DEFINE_UNQUOTED(CONFIG_PROCESS_MUTED_CHANNELS, 1, [Define to 1 if you want to enable processing of muted channels.])
 fi
 
+AC_ARG_ENABLE(interpolate-volume,
+  [  --disable-interpolate-volume
+                          Disable interpolation of volume modulation
+                          (default=on). With this enabled, the volume changes
+                          generated by for example the envelope generator
+                          will be smoother, minimizing the risk for audio
+                          clicks. Disable it to reduce CPU usage.],
+  [config_interpolate_volume="no"],
+  [config_interpolate_volume="yes"]
+)
+if test "$config_interpolate_volume" = "yes"; then
+  AC_DEFINE_UNQUOTED(CONFIG_INTERPOLATE_VOLUME, 1, [Define to 1 if you want to enable interpolation of volume modulation.])
+fi
+
 
 ###########################################################################
 # Automatic Benchmarks (to detect the best algorithms for the system)
@@ -876,6 +890,7 @@ echo "# Override Filter Resonance Controller: ${config_override_resonance_ctrl}"
 echo "# Override Filter Type: ${config_override_filter_type}"
 echo "# Assert GS SysEx Checksum: ${config_assert_gs_sysex_checksum}"
 echo "# Process Muted Channels: ${config_process_muted_channels}"
+echo "# Interpolate Volume: ${config_interpolate_volume}"
 echo "#-------------------------------------------------------------------#"
 echo "# Read './configure --help' or file 'configure.in' for details.     #"
 echo "#####################################################################"
